--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
     <title>JogakZip</title>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
