--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>JogakZip</title>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
